# TimeBasedPicture

./: .gitignore  .npmrc  README.md  binding.gyp  doxygen.conf  package-lock.json  package.json
backend/: wrapper.cpp
backend/OpenGL/include/: glapplication.hpp  structs.hpp  window.hpp
backend/OpenGL/shader/: tex.comp
backend/OpenGL/src/: glapplication.cpp  main.cpp  test  window.cpp
backend/TBPsys/: CMakeLists.txt
backend/TBPsys/include/: average.hpp  base.hpp  boost.hpp  boostColor.hpp  circularfade.hpp  interpretation.hpp  overplott.hpp  paint.hpp  reduce.hpp  segment.hpp  singleimage.hpp  struct.hpp  timefadepoints.hpp  transferfunction.hpp  transformation.hpp  utils.hpp
backend/TBPsys/src/: average.cpp  base.cpp  boost.cpp  boostColor.cpp  circularfade.cpp  interpretation.cpp  overplott.cpp  paint.cpp  reduce.cpp  segment.cpp  singleimage.cpp  terminal-time.cpp  testlab.cpp  timefadepoints.cpp  transferfunction.cpp  transformation.cpp  utils.cpp  videolab.cpp
docs/: index.html
docs/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c.js  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  OpenMPCheckVersion_8c.html  OpenMPCheckVersion_8c__incl.dot  OpenMPCheckVersion_8c__incl.md5  OpenMPCheckVersion_8c_source.html  OpenMPCheckVersion_8cpp.html  OpenMPCheckVersion_8cpp.js  OpenMPCheckVersion_8cpp__incl.dot  OpenMPCheckVersion_8cpp__incl.md5  OpenMPCheckVersion_8cpp_source.html  OpenMPTryFlag_8c.html  OpenMPTryFlag_8c__incl.dot  OpenMPTryFlag_8c__incl.md5  OpenMPTryFlag_8c_source.html  OpenMPTryFlag_8cpp.html  OpenMPTryFlag_8cpp.js  OpenMPTryFlag_8cpp__incl.dot  OpenMPTryFlag_8cpp__incl.md5  OpenMPTryFlag_8cpp_source.html  annotated.html  annotated_dup.js  average_8cpp.html  average_8cpp__incl.map  average_8cpp__incl.md5  average_8cpp_source.html  average_8hpp.html  average_8hpp__dep__incl.map  average_8hpp__dep__incl.md5  average_8hpp__incl.map  average_8hpp__incl.md5  average_8hpp_source.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  base_8cpp_source.html  base_8hpp.html  (+589 more)
docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+13 more)
frontend/: index.html  index.js  interpretations.json
frontend/css/: preview.css  timeline.css  vars.css
frontend/js/modules/: canvas.html  canvas.js  color.js  config.js  edit.js  interpretations.js  ipc.js  loader.js  masking.js  paintmask.js  points.js  preview.js  scrollx.js  scrolly.js  segments.js  tabs.js  timeline.js  transfer.js  transformation.js
shader/: tex.comp  weighted_sum.comp
